version/0.9/_sources/changelog.rst.txt
.. _ref_release_notes:

Release notes
#############

This document contains the release notes for the PySpeos project.

.. vale off

.. towncrier release notes start

`0.9.2 <https://github.com/ansys/pyspeos/releases/tag/v0.9.2>`_ - September 16, 2026
====================================================================================

.. tab-set::


  .. tab-item:: Added

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Add thermic source
          - `#651 <https://github.com/ansys/pyspeos/pull/651>`_

        * - Core - OptProp - Remove redundancy from members
          - `#1097 <https://github.com/ansys/pyspeos/pull/1097>`_

        * - Add support for optimized propagation in inverse simulations
          - `#1112 <https://github.com/ansys/pyspeos/pull/1112>`_


  .. tab-item:: Fixed

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Backwardscompatibility
          - `#1076 <https://github.com/ansys/pyspeos/pull/1076>`_

        * - Core layer - Simulation feature - Correct docstring and naming for set_texture_xxx methods
          - `#1077 <https://github.com/ansys/pyspeos/pull/1077>`_

        * - Doc-build
          - `#1084 <https://github.com/ansys/pyspeos/pull/1084>`_

        * - Core - OptProp - various fixes
          - `#1104 <https://github.com/ansys/pyspeos/pull/1104>`_, `#1105 <https://github.com/ansys/pyspeos/pull/1105>`_

        * - Jupyterlab version
          - `#1106 <https://github.com/ansys/pyspeos/pull/1106>`_

        * - Core - optprop - work on _to_dict() method (texture missing)
          - `#1107 <https://github.com/ansys/pyspeos/pull/1107>`_

        * - Core - optprop - creation of _prepare_xxx_assignment to ease helpers usage
          - `#1108 <https://github.com/ansys/pyspeos/pull/1108>`_

        * - Core - project - raise error if vbb is not supported by the server
          - `#1109 <https://github.com/ansys/pyspeos/pull/1109>`_

        * - Nightly thermic test
          - `#1114 <https://github.com/ansys/pyspeos/pull/1114>`_

        * - Improve performances for commit
          - `#1115 <https://github.com/ansys/pyspeos/pull/1115>`_

        * - Commit enhancement multi-version support
          - `#1120 <https://github.com/ansys/pyspeos/pull/1120>`_

        * - Nightly failure lightbox test str comparison
          - `#1128 <https://github.com/ansys/pyspeos/pull/1128>`_

        * - Exporting virtual bsdf bench before 261 SP1
          - `#1130 <https://github.com/ansys/pyspeos/pull/1130>`_


  .. tab-item:: Dependencies

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Bump the actions group across 1 directory with 3 updates
          - `#1078 <https://github.com/ansys/pyspeos/pull/1078>`_

        * - Bump grpcio from 1.82.1 to 1.83.0 in the grpc-deps group
          - `#1079 <https://github.com/ansys/pyspeos/pull/1079>`_

        * - Bump the dev-dependencies group with 2 updates
          - `#1080 <https://github.com/ansys/pyspeos/pull/1080>`_

        * - Bump docker/login-action from 4.5.1 to 4.6.0 in the actions group
          - `#1095 <https://github.com/ansys/pyspeos/pull/1095>`_

        * - Bump ansys-platform-instancemanagement from 1.1.2 to 1.2.0 in the optional-deps group
          - `#1100 <https://github.com/ansys/pyspeos/pull/1100>`_

        * - Update flit-core requirement from <4,>=3.2 to >=3.2,<5
          - `#1101 <https://github.com/ansys/pyspeos/pull/1101>`_

        * - Bump the actions group across 1 directory with 14 updates
          - `#1116 <https://github.com/ansys/pyspeos/pull/1116>`_

        * - Bump aiohttp from 3.14.1 to 3.14.3 in the security-updates group across 1 directory
          - `#1118 <https://github.com/ansys/pyspeos/pull/1118>`_

        * - Bump prek from 0.4.4 to 0.5.0 in the dev-dependencies group
          - `#1121 <https://github.com/ansys/pyspeos/pull/1121>`_


  .. tab-item:: Maintenance

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Improve typing generic
          - `#911 <https://github.com/ansys/pyspeos/pull/911>`_

        * - Temporarily pin ansys/actions/check-vulnerabilities to main
          - `#1081 <https://github.com/ansys/pyspeos/pull/1081>`_

        * - Pre-commit autoupdate
          - `#1082 <https://github.com/ansys/pyspeos/pull/1082>`_, `#1098 <https://github.com/ansys/pyspeos/pull/1098>`_, `#1103 <https://github.com/ansys/pyspeos/pull/1103>`_, `#1117 <https://github.com/ansys/pyspeos/pull/1117>`_, `#1123 <https://github.com/ansys/pyspeos/pull/1123>`_

        * - Update missing or outdated files
          - `#1094 <https://github.com/ansys/pyspeos/pull/1094>`_

        * - Possibility to use a specific docker image in PR ci/cd
          - `#1122 <https://github.com/ansys/pyspeos/pull/1122>`_

        * - Bump pypa/gh-action-pypi-publish into v1.14.2
          - `#1134 <https://github.com/ansys/pyspeos/pull/1134>`_


`0.9.1 <https://github.com/ansys/pyspeos/releases/tag/v0.9.1>`_ - July 29, 2026
===============================================================================

.. tab-set::


  .. tab-item:: Added

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Workflow - Export to vtp - Add possibility to export results retrieved via Speos HPC computation
          - `#1028 <https://github.com/ansys/pyspeos/pull/1028>`_

        * - Diffraction effects
          - `#1038 <https://github.com/ansys/pyspeos/pull/1038>`_

        * - Add cie overcast
          - `#1047 <https://github.com/ansys/pyspeos/pull/1047>`_

        * - Add ambient us standard
          - `#1048 <https://github.com/ansys/pyspeos/pull/1048>`_

        * - Observer sensor
          - `#1049 <https://github.com/ansys/pyspeos/pull/1049>`_

        * - Polar intensity
          - `#1050 <https://github.com/ansys/pyspeos/pull/1050>`_

        * - Sp3 diffractiveeffects
          - `#1062 <https://github.com/ansys/pyspeos/pull/1062>`_


  .. tab-item:: Documentation

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Frequent ask questions
          - `#1051 <https://github.com/ansys/pyspeos/pull/1051>`_


  .. tab-item:: Dependencies

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - 
          - `#1012 <https://github.com/ansys/pyspeos/pull/1012>`_

        * - Bump codecov/codecov-action from 6.0.1 to 7.0.0
          - `#1013 <https://github.com/ansys/pyspeos/pull/1013>`_, `#1029 <https://github.com/ansys/pyspeos/pull/1029>`_

        * - Bump ansys-tools-common from 0.5.0 to 0.5.1 in the core-deps group
          - `#1014 <https://github.com/ansys/pyspeos/pull/1014>`_

        * - Bump ruff from 0.15.15 to 0.15.16
          - `#1015 <https://github.com/ansys/pyspeos/pull/1015>`_

        * - Bump prek from 0.4.3 to 0.4.4
          - `#1016 <https://github.com/ansys/pyspeos/pull/1016>`_

        * - Bump jupyter-server from 2.19.0 to 2.20.0
          - `#1018 <https://github.com/ansys/pyspeos/pull/1018>`_

        * - Bump ty from 0.0.44 to 0.0.49
          - `#1019 <https://github.com/ansys/pyspeos/pull/1019>`_

        * - Bump ruff from 0.15.16 to 0.15.17
          - `#1020 <https://github.com/ansys/pyspeos/pull/1020>`_

        * - Bump msgpack from 1.2.0 to 1.2.1
          - `#1021 <https://github.com/ansys/pyspeos/pull/1021>`_

        * - Bump jupyterlab from 4.5.8 to 4.5.9
          - `#1022 <https://github.com/ansys/pyspeos/pull/1022>`_

        * - Bump astral-sh/setup-uv from 8.1.0 to 8.2.0
          - `#1030 <https://github.com/ansys/pyspeos/pull/1030>`_

        * - Bump actions/checkout from 6.0.3 to 7.0.0
          - `#1031 <https://github.com/ansys/pyspeos/pull/1031>`_

        * - Bump ruff from 0.15.17 to 0.15.18
          - `#1035 <https://github.com/ansys/pyspeos/pull/1035>`_

        * - Bump ansys-api-speos from 0.16.2 to 0.16.3
          - `#1036 <https://github.com/ansys/pyspeos/pull/1036>`_

        * - Bump the optional-deps group with 2 updates
          - `#1043 <https://github.com/ansys/pyspeos/pull/1043>`_

        * - Bump pytest from 9.0.3 to 9.1.1 in the dev-dependencies group
          - `#1044 <https://github.com/ansys/pyspeos/pull/1044>`_

        * - Bump actions/setup-python from 6.2.0 to 6.3.0 in the actions group
          - `#1052 <https://github.com/ansys/pyspeos/pull/1052>`_

        * - Bump mistune from 3.2.1 to 3.3.0 in the security-updates group across 1 directory
          - `#1058 <https://github.com/ansys/pyspeos/pull/1058>`_

        * - Bump docker/login-action from 4.2.0 to 4.4.0 in the actions group
          - `#1059 <https://github.com/ansys/pyspeos/pull/1059>`_

        * - Bump the actions group with 2 updates
          - `#1063 <https://github.com/ansys/pyspeos/pull/1063>`_

        * - Bump grpcio from 1.81.1 to 1.82.1 in the grpc-deps group
          - `#1064 <https://github.com/ansys/pyspeos/pull/1064>`_

        * - Bump ruff-pre-commit from v0.15.20 to 0.15.21 in the precommit group
          - `#1065 <https://github.com/ansys/pyspeos/pull/1065>`_

        * - Bump pillow from 12.2.0 to 12.3.0 in the security-updates group across 1 directory
          - `#1070 <https://github.com/ansys/pyspeos/pull/1070>`_

        * - Bump jupyterlab from 4.6.1 to 4.6.2 in the security-updates group across 1 directory
          - `#1072 <https://github.com/ansys/pyspeos/pull/1072>`_

        * - Bump actions/labeler from 6.2.0 to 7.0.0 in the actions group
          - `#1073 <https://github.com/ansys/pyspeos/pull/1073>`_

        * - Bump ansys-tools-visualization-interface from 0.13.3 to 0.14.0 in the optional-deps group
          - `#1074 <https://github.com/ansys/pyspeos/pull/1074>`_


  .. tab-item:: Maintenance

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Type check bsdf and lxp
          - `#912 <https://github.com/ansys/pyspeos/pull/912>`_

        * - Leverage group dependencies (PEP 735) and uv lock file
          - `#1001 <https://github.com/ansys/pyspeos/pull/1001>`_

        * - Update CHANGELOG for v0.9.0
          - `#1010 <https://github.com/ansys/pyspeos/pull/1010>`_

        * - Improve release process
          - `#1011 <https://github.com/ansys/pyspeos/pull/1011>`_

        * - Bump dev version into v0.10.dev0
          - `#1017 <https://github.com/ansys/pyspeos/pull/1017>`_

        * - Update missing or outdated files
          - `#1023 <https://github.com/ansys/pyspeos/pull/1023>`_, `#1046 <https://github.com/ansys/pyspeos/pull/1046>`_

        * - Update copyright headers
          - `#1024 <https://github.com/ansys/pyspeos/pull/1024>`_

        * - Fix reusable action's python setup
          - `#1026 <https://github.com/ansys/pyspeos/pull/1026>`_

        * - Update dependabot configuration
          - `#1037 <https://github.com/ansys/pyspeos/pull/1037>`_

        * - 
          - `#1045 <https://github.com/ansys/pyspeos/pull/1045>`_, `#1053 <https://github.com/ansys/pyspeos/pull/1053>`_, `#1060 <https://github.com/ansys/pyspeos/pull/1060>`_, `#1075 <https://github.com/ansys/pyspeos/pull/1075>`_

        * - Use 26r1 sp3
          - `#1057 <https://github.com/ansys/pyspeos/pull/1057>`_


`0.9.0 <https://github.com/ansys/pyspeos/releases/tag/v0.9.0>`_ - June 17, 2026
===============================================================================

.. tab-set::


  .. tab-item:: Added

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Light box
          - `#919 <https://github.com/ansys/pyspeos/pull/919>`_

        * - Add source group support to simulation classes via ``BaseSimulation.add_source_group()``.
          - `#943 <https://github.com/ansys/pyspeos/pull/943>`_

        * - Add simulation source groups
          - `#955 <https://github.com/ansys/pyspeos/pull/955>`_

        * - Prepare for Speos 26r1 sp2
          - `#963 <https://github.com/ansys/pyspeos/pull/963>`_

        * - Implement source CIE Standard General Sky
          - `#983 <https://github.com/ansys/pyspeos/pull/983>`_

        * - Implement timeline
          - `#985 <https://github.com/ansys/pyspeos/pull/985>`_

        * - Add immersive sensor
          - `#990 <https://github.com/ansys/pyspeos/pull/990>`_

        * - Export xmp to png
          - `#999 <https://github.com/ansys/pyspeos/pull/999>`_

        * - Timeline for source and example for timelines
          - `#1004 <https://github.com/ansys/pyspeos/pull/1004>`_


  .. tab-item:: Fixed

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Nightly run uniform ambient source
          - `#958 <https://github.com/ansys/pyspeos/pull/958>`_

        * - Infinite simulation
          - `#988 <https://github.com/ansys/pyspeos/pull/988>`_

        * - Nightly failed on 251
          - `#1000 <https://github.com/ansys/pyspeos/pull/1000>`_

        * - Resolve issue with missing filled properties and attributes
          - `#1002 <https://github.com/ansys/pyspeos/pull/1002>`_


  .. tab-item:: Documentation

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Fix jupyter notebook download
          - `#996 <https://github.com/ansys/pyspeos/pull/996>`_

        * - Refactor download button
          - `#998 <https://github.com/ansys/pyspeos/pull/998>`_


  .. tab-item:: Dependencies

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Update pyvista requirement from <0.48,>=0.40.0 to >=0.40.0,<0.49 in the graphics-deps group
          - `#961 <https://github.com/ansys/pyspeos/pull/961>`_

        * - Bump the doc-deps group across 1 directory with 3 updates
          - `#974 <https://github.com/ansys/pyspeos/pull/974>`_

        * - Bump the doc-deps group with 2 updates
          - `#993 <https://github.com/ansys/pyspeos/pull/993>`_, `#1007 <https://github.com/ansys/pyspeos/pull/1007>`_

        * - Bump notebook from 7.5.6 to 7.5.7 in the jupyter-deps group
          - `#1008 <https://github.com/ansys/pyspeos/pull/1008>`_


  .. tab-item:: Maintenance

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Update CHANGELOG for v0.8.0
          - `#956 <https://github.com/ansys/pyspeos/pull/956>`_

        * - Bump ansys/actions from 10.3.0 to 10.3.1
          - `#959 <https://github.com/ansys/pyspeos/pull/959>`_

        * - Bump actions/labeler from 6.0.1 to 6.1.0
          - `#962 <https://github.com/ansys/pyspeos/pull/962>`_

        * - Pre-commit autoupdate
          - `#964 <https://github.com/ansys/pyspeos/pull/964>`_, `#986 <https://github.com/ansys/pyspeos/pull/986>`_, `#997 <https://github.com/ansys/pyspeos/pull/997>`_, `#1009 <https://github.com/ansys/pyspeos/pull/1009>`_

        * - Update CHANGELOG for v0.8.1
          - `#972 <https://github.com/ansys/pyspeos/pull/972>`_

        * - Update CHANGELOG for v0.7.4
          - `#976 <https://github.com/ansys/pyspeos/pull/976>`_, `#979 <https://github.com/ansys/pyspeos/pull/979>`_

        * - Upgrade pyvista version
          - `#980 <https://github.com/ansys/pyspeos/pull/980>`_

        * - Update CHANGELOG for v0.8.2
          - `#982 <https://github.com/ansys/pyspeos/pull/982>`_

        * - Bump ansys/actions from 10.3.1 to 10.3.2
          - `#984 <https://github.com/ansys/pyspeos/pull/984>`_

        * - Bump codecov/codecov-action from 6.0.0 to 6.0.1
          - `#991 <https://github.com/ansys/pyspeos/pull/991>`_

        * - Bump docker/login-action from 4.1.0 to 4.2.0
          - `#992 <https://github.com/ansys/pyspeos/pull/992>`_

        * - Bump actions/checkout from 6.0.2 to 6.0.3
          - `#1005 <https://github.com/ansys/pyspeos/pull/1005>`_

        * - Bump astral-sh/setup-uv from 8.1.0 to 8.2.0
          - `#1006 <https://github.com/ansys/pyspeos/pull/1006>`_


`0.8.2 <https://github.com/ansys/pyspeos/releases/tag/v0.8.2>`_ - May 21, 2026
==============================================================================

.. tab-set::


  .. tab-item:: Fixed

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Mesh change not working
          - `#970 <https://github.com/ansys/pyspeos/pull/970>`_

        * - Theme version to display cheatsheet
          - `#973 <https://github.com/ansys/pyspeos/pull/973>`_


  .. tab-item:: Maintenance

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Bump ansys-sphinx-theme to 1.8.0
          - `#966 <https://github.com/ansys/pyspeos/pull/966>`_


`0.8.0 <https://github.com/ansys/pyspeos/releases/tag/v0.8.0>`_ - May 08, 2026
==============================================================================

.. tab-set::


  .. tab-item:: Breaking

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Refactor source class
          - `#690 <https://github.com/ansys/pyspeos/pull/690>`_

        * - Sensor
          - `#691 <https://github.com/ansys/pyspeos/pull/691>`_

        * - Optical prop texture
          - `#848 <https://github.com/ansys/pyspeos/pull/848>`_

        * - Project properties
          - `#869 <https://github.com/ansys/pyspeos/pull/869>`_

        * - Part body face refactor
          - `#874 <https://github.com/ansys/pyspeos/pull/874>`_

        * - Simulation properties
          - `#876 <https://github.com/ansys/pyspeos/pull/876>`_


  .. tab-item:: Added

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Intensitysensor
          - `#653 <https://github.com/ansys/pyspeos/pull/653>`_

        * - Core - simulation - add stop_computation method
          - `#819 <https://github.com/ansys/pyspeos/pull/819>`_

        * - Support combining multi xmp vtp
          - `#830 <https://github.com/ansys/pyspeos/pull/830>`_

        * - Display Source
          - `#858 <https://github.com/ansys/pyspeos/pull/858>`_

        * - Use server 26r1
          - `#862 <https://github.com/ansys/pyspeos/pull/862>`_

        * - Launcher supports finding the latest version
          - `#890 <https://github.com/ansys/pyspeos/pull/890>`_

        * - Add fill parameters
          - `#892 <https://github.com/ansys/pyspeos/pull/892>`_

        * - Prepare to use speos 261 sp1
          - `#926 <https://github.com/ansys/pyspeos/pull/926>`_

        * - Add supporting ambient uniform & agent instruction
          - `#940 <https://github.com/ansys/pyspeos/pull/940>`_


  .. tab-item:: Fixed

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Preparation for 26R1
          - `#818 <https://github.com/ansys/pyspeos/pull/818>`_

        * - Nightly fails
          - `#871 <https://github.com/ansys/pyspeos/pull/871>`_

        * - Preview scale
          - `#883 <https://github.com/ansys/pyspeos/pull/883>`_

        * - Core level - Volume Optical Property - fix error when committing a vop to none whereas previously committed to another type (like opaque)
          - `#913 <https://github.com/ansys/pyspeos/pull/913>`_

        * - Regression texture
          - `#941 <https://github.com/ansys/pyspeos/pull/941>`_


  .. tab-item:: Documentation

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Update \`\`CONTRIBUTORS.md\`\` with the latest contributors
          - `#832 <https://github.com/ansys/pyspeos/pull/832>`_, `#843 <https://github.com/ansys/pyspeos/pull/843>`_

        * - Add new doc section
          - `#953 <https://github.com/ansys/pyspeos/pull/953>`_


  .. tab-item:: Dependencies

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Bump the doc-deps group with 3 updates
          - `#816 <https://github.com/ansys/pyspeos/pull/816>`_

        * - Bump notebook from 7.5.1 to 7.5.2 in the jupyter-deps group
          - `#817 <https://github.com/ansys/pyspeos/pull/817>`_

        * - Bump the doc-deps group with 2 updates
          - `#823 <https://github.com/ansys/pyspeos/pull/823>`_, `#834 <https://github.com/ansys/pyspeos/pull/834>`_, `#878 <https://github.com/ansys/pyspeos/pull/878>`_

        * - Bump notebook from 7.5.2 to 7.5.3 in the jupyter-deps group
          - `#835 <https://github.com/ansys/pyspeos/pull/835>`_

        * - Bump psutil from 7.2.1 to 7.2.2
          - `#836 <https://github.com/ansys/pyspeos/pull/836>`_

        * - Update pyvista[jupyter] requirement from <0.47,>=0.43 to >=0.43,<0.48
          - `#852 <https://github.com/ansys/pyspeos/pull/852>`_

        * - Supporting Python 3.14
          - `#859 <https://github.com/ansys/pyspeos/pull/859>`_

        * - Bump the doc-deps group across 1 directory with 2 updates
          - `#866 <https://github.com/ansys/pyspeos/pull/866>`_

        * - Bump notebook from 7.5.3 to 7.5.4 in the jupyter-deps group
          - `#879 <https://github.com/ansys/pyspeos/pull/879>`_

        * - Bump jupyterlab from 4.5.5 to 4.5.6 in the doc-deps group
          - `#885 <https://github.com/ansys/pyspeos/pull/885>`_

        * - Bump ansys-api-speos from 0.16.0 to 0.16.1
          - `#887 <https://github.com/ansys/pyspeos/pull/887>`_

        * - Bump notebook from 7.5.4 to 7.5.5 in the jupyter-deps group
          - `#888 <https://github.com/ansys/pyspeos/pull/888>`_

        * - Bump pytest-cov from 7.0.0 to 7.1.0 in the test-deps group
          - `#914 <https://github.com/ansys/pyspeos/pull/914>`_

        * - Bump nbconvert from 7.17.0 to 7.17.1 in the doc-deps group
          - `#930 <https://github.com/ansys/pyspeos/pull/930>`_

        * - Bump pytest from 9.0.2 to 9.0.3 in the test-deps group
          - `#931 <https://github.com/ansys/pyspeos/pull/931>`_

        * - Bump notebook from 7.5.5 to 7.5.6
          - `#947 <https://github.com/ansys/pyspeos/pull/947>`_

        * - Bump jupyterlab from 4.5.6 to 4.5.7
          - `#948 <https://github.com/ansys/pyspeos/pull/948>`_


  .. tab-item:: Maintenance

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Pre-commit autoupdate
          - `#812 <https://github.com/ansys/pyspeos/pull/812>`_, `#826 <https://github.com/ansys/pyspeos/pull/826>`_, `#846 <https://github.com/ansys/pyspeos/pull/846>`_, `#847 <https://github.com/ansys/pyspeos/pull/847>`_, `#854 <https://github.com/ansys/pyspeos/pull/854>`_, `#856 <https://github.com/ansys/pyspeos/pull/856>`_, `#891 <https://github.com/ansys/pyspeos/pull/891>`_, `#895 <https://github.com/ansys/pyspeos/pull/895>`_, `#917 <https://github.com/ansys/pyspeos/pull/917>`_, `#925 <https://github.com/ansys/pyspeos/pull/925>`_, `#936 <https://github.com/ansys/pyspeos/pull/936>`_, `#944 <https://github.com/ansys/pyspeos/pull/944>`_

        * - Update CHANGELOG for v0.7.1
          - `#814 <https://github.com/ansys/pyspeos/pull/814>`_

        * - Bump actions/checkout from 6.0.1 to 6.0.2
          - `#821 <https://github.com/ansys/pyspeos/pull/821>`_

        * - Bump actions/setup-python from 6.1.0 to 6.2.0
          - `#822 <https://github.com/ansys/pyspeos/pull/822>`_

        * - Bump dev version into v0.8.dev0
          - `#825 <https://github.com/ansys/pyspeos/pull/825>`_

        * - Adding back jupyter check following nbconvert release
          - `#828 <https://github.com/ansys/pyspeos/pull/828>`_

        * - Update missing or outdated files
          - `#831 <https://github.com/ansys/pyspeos/pull/831>`_

        * - Bump ansys/actions from 10.2.3 to 10.2.4
          - `#833 <https://github.com/ansys/pyspeos/pull/833>`_

        * - Add dependabot cooldown settings
          - `#838 <https://github.com/ansys/pyspeos/pull/838>`_

        * - Update CHANGELOG for v0.7.2
          - `#842 <https://github.com/ansys/pyspeos/pull/842>`_

        * - Bump docker/login-action from 3.6.0 to 3.7.0
          - `#844 <https://github.com/ansys/pyspeos/pull/844>`_

        * - Bump actions/upload-artifact from 6.0.0 to 7.0.0
          - `#863 <https://github.com/ansys/pyspeos/pull/863>`_

        * - Bump docker/login-action from 3.7.0 to 4.0.0
          - `#877 <https://github.com/ansys/pyspeos/pull/877>`_

        * - Bump pyvista/setup-headless-display-action from 4.2 to 4.3
          - `#884 <https://github.com/ansys/pyspeos/pull/884>`_

        * - Bump actions/download-artifact from 7.0.0 to 8.0.1
          - `#886 <https://github.com/ansys/pyspeos/pull/886>`_

        * - Update CHANGELOG for v0.7.3
          - `#889 <https://github.com/ansys/pyspeos/pull/889>`_

        * - Add type check job and cleanup mypy refs
          - `#894 <https://github.com/ansys/pyspeos/pull/894>`_

        * - Bump codecov/codecov-action from 5.5.2 to 6.0.0
          - `#915 <https://github.com/ansys/pyspeos/pull/915>`_, `#929 <https://github.com/ansys/pyspeos/pull/929>`_

        * - Split into dedicated workflows
          - `#918 <https://github.com/ansys/pyspeos/pull/918>`_

        * - Bump astral-sh/setup-uv from 7.3.0 to 8.0.0
          - `#921 <https://github.com/ansys/pyspeos/pull/921>`_

        * - Bump docker/login-action from 4.0.0 to 4.1.0
          - `#922 <https://github.com/ansys/pyspeos/pull/922>`_

        * - Bump ansys/actions from 10.2.5 to 10.2.12
          - `#923 <https://github.com/ansys/pyspeos/pull/923>`_, `#942 <https://github.com/ansys/pyspeos/pull/942>`_

        * - Add job to check action security
          - `#924 <https://github.com/ansys/pyspeos/pull/924>`_

        * - Update license metadata in pyproject.toml
          - `#927 <https://github.com/ansys/pyspeos/pull/927>`_

        * - Bump pypa/gh-action-pypi-publish from 1.13.0 to 1.14.0
          - `#928 <https://github.com/ansys/pyspeos/pull/928>`_

        * - Cleanup readme, pyproject and main workflow
          - `#932 <https://github.com/ansys/pyspeos/pull/932>`_

        * - Bump actions/upload-artifact from 7.0.0 to 7.0.1
          - `#934 <https://github.com/ansys/pyspeos/pull/934>`_

        * - Bump astral-sh/setup-uv from 8.0.0 to 8.1.0
          - `#935 <https://github.com/ansys/pyspeos/pull/935>`_

        * - Update dependabot cooldown configuration
          - `#951 <https://github.com/ansys/pyspeos/pull/951>`_

        * - Bump ansys/actions into v10.3.0
          - `#952 <https://github.com/ansys/pyspeos/pull/952>`_


  .. tab-item:: Test

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Further updates/support for intensity sensor
          - `#673 <https://github.com/ansys/pyspeos/pull/673>`_

        * - Refactor natural light source data checks
          - `#920 <https://github.com/ansys/pyspeos/pull/920>`_

        * - Do not use unneeded typing.override
          - `#946 <https://github.com/ansys/pyspeos/pull/946>`_


`0.7.4 <https://github.com/ansys/pyspeos/releases/tag/v0.7.4>`_ - May 21, 2026
==============================================================================

.. tab-set::


  .. tab-item:: Fixed

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Mesh change not working
          - `#970 <https://github.com/ansys/pyspeos/pull/970>`_

        * - Theme version to display cheatsheet
          - `#973 <https://github.com/ansys/pyspeos/pull/973>`_


`0.7.3 <https://github.com/ansys/pyspeos/releases/tag/v0.7.3>`_ - March 23, 2026
================================================================================

.. tab-set::


  .. tab-item:: Dependencies

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Remove upper-limit on grpc requirements
          - `#880 <https://github.com/ansys/pyspeos/pull/880>`_


`0.7.2 <https://github.com/ansys/pyspeos/releases/tag/v0.7.2>`_ - February 06, 2026
===================================================================================

.. tab-set::


  .. tab-item:: Added

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Source ambient environment
          - `#808 <https://github.com/ansys/pyspeos/pull/808>`_

        * - Source ambient environment - In 0.7
          - `#841 <https://github.com/ansys/pyspeos/pull/841>`_


  .. tab-item:: Documentation

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Add Gaussian function and update R and T parts
          - `#837 <https://github.com/ansys/pyspeos/pull/837>`_

        * - Add Gaussian function and update R and T parts - in 0.7
          - `#840 <https://github.com/ansys/pyspeos/pull/840>`_


  .. tab-item:: Fixed

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Speos launcher using pim - fix issue when getting target from channel
          - `#827 <https://github.com/ansys/pyspeos/pull/827>`_

        * - Speos launcher using pim - fix issue when getting target from channel - In 0.7
          - `#839 <https://github.com/ansys/pyspeos/pull/839>`_


`0.7.1 <https://github.com/ansys/pyspeos/releases/tag/v0.7.1>`_ - January 13, 2026
==================================================================================

.. tab-set::


  .. tab-item:: Added

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Add supporting virtual bsdf bench
          - `#763 <https://github.com/ansys/pyspeos/pull/763>`_


  .. tab-item:: Dependencies

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Bump ansys-sphinx-theme[autoapi] from 1.6.3 to 1.6.4 in the doc-deps group
          - `#793 <https://github.com/ansys/pyspeos/pull/793>`_

        * - Bump pytest from 9.0.1 to 9.0.2 in the test-deps group
          - `#795 <https://github.com/ansys/pyspeos/pull/795>`_

        * - Bump the jupyter-deps group across 1 directory with 2 updates
          - `#807 <https://github.com/ansys/pyspeos/pull/807>`_

        * - Bump psutil from 7.1.3 to 7.2.1
          - `#809 <https://github.com/ansys/pyspeos/pull/809>`_


  .. tab-item:: Fixed

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Exclude vbb test from nightly run with 251
          - `#801 <https://github.com/ansys/pyspeos/pull/801>`_

        * - Nightly run
          - `#811 <https://github.com/ansys/pyspeos/pull/811>`_


  .. tab-item:: Maintenance

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Rework logic around vtk-osmesa
          - `#774 <https://github.com/ansys/pyspeos/pull/774>`_

        * - Bump ansys/actions from 10.2.2 to 10.2.3
          - `#791 <https://github.com/ansys/pyspeos/pull/791>`_

        * - Bump actions/checkout from 6.0.0 to 6.0.1
          - `#792 <https://github.com/ansys/pyspeos/pull/792>`_

        * - Bump codecov/codecov-action from 5.5.1 to 5.5.2
          - `#794 <https://github.com/ansys/pyspeos/pull/794>`_

        * - Update CHANGELOG for v0.7.0
          - `#796 <https://github.com/ansys/pyspeos/pull/796>`_

        * - Bump dev version into v0.7.dev0
          - `#797 <https://github.com/ansys/pyspeos/pull/797>`_

        * - Bump actions/download-artifact from 6.0.0 to 7.0.0
          - `#798 <https://github.com/ansys/pyspeos/pull/798>`_

        * - Bump actions/upload-artifact from 5.0.0 to 6.0.0
          - `#799 <https://github.com/ansys/pyspeos/pull/799>`_

        * - Pre-commit autoupdate
          - `#800 <https://github.com/ansys/pyspeos/pull/800>`_, `#805 <https://github.com/ansys/pyspeos/pull/805>`_

        * - Update year in headers
          - `#810 <https://github.com/ansys/pyspeos/pull/810>`_


`0.7.0 <https://github.com/ansys/pyspeos/releases/tag/v0.7.0>`_ - December 12, 2025
===================================================================================

.. tab-set::


  .. tab-item:: Added

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Update vtk-osmesa version to 9.3.1
          - `#756 <https://github.com/ansys/pyspeos/pull/756>`_

        * - Use grpc secure channel
          - `#783 <https://github.com/ansys/pyspeos/pull/783>`_


  .. tab-item:: Dependencies

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Bump the doc-deps group with 2 updates
          - `#723 <https://github.com/ansys/pyspeos/pull/723>`_

        * - Bump pytest-cov from 6.3.0 to 7.0.0 in the test-deps group
          - `#724 <https://github.com/ansys/pyspeos/pull/724>`_

        * - Update grpcio requirement from <1.75,>=1.50.0 to >=1.50.0,<1.76 in the grpc-deps group
          - `#735 <https://github.com/ansys/pyspeos/pull/735>`_

        * - Bump psutil from 7.0.0 to 7.1.0
          - `#737 <https://github.com/ansys/pyspeos/pull/737>`_

        * - Bump the jupyter-deps group across 1 directory with 2 updates
          - `#753 <https://github.com/ansys/pyspeos/pull/753>`_, `#781 <https://github.com/ansys/pyspeos/pull/781>`_

        * - Use autoapi target of ansys-sphinx-theme
          - `#754 <https://github.com/ansys/pyspeos/pull/754>`_

        * - Update grpcio requirement from <1.76,>=1.50.0 to >=1.50.0,<1.77 in the grpc-deps group
          - `#766 <https://github.com/ansys/pyspeos/pull/766>`_

        * - Bump psutil from 7.1.0 to 7.1.3
          - `#771 <https://github.com/ansys/pyspeos/pull/771>`_

        * - Bump pytest from 8.4.2 to 9.0.0 in the test-deps group
          - `#773 <https://github.com/ansys/pyspeos/pull/773>`_

        * - Bump the doc-deps group across 1 directory with 5 updates
          - `#789 <https://github.com/ansys/pyspeos/pull/789>`_


  .. tab-item:: Documentation

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Update ``CONTRIBUTORS.md`` with the latest contributors
          - `#744 <https://github.com/ansys/pyspeos/pull/744>`_

        * - Fix typo in CONTRIBUTING.md
          - `#786 <https://github.com/ansys/pyspeos/pull/786>`_


  .. tab-item:: Maintenance

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Update CHANGELOG for v0.6.2
          - `#721 <https://github.com/ansys/pyspeos/pull/721>`_

        * - Pre-commit autoupdate
          - `#725 <https://github.com/ansys/pyspeos/pull/725>`_, `#757 <https://github.com/ansys/pyspeos/pull/757>`_, `#782 <https://github.com/ansys/pyspeos/pull/782>`_, `#790 <https://github.com/ansys/pyspeos/pull/790>`_

        * - Update CHANGELOG for v0.6.3
          - `#732 <https://github.com/ansys/pyspeos/pull/732>`_

        * - Add vulnerability check
          - `#738 <https://github.com/ansys/pyspeos/pull/738>`_

        * - Add security policy file
          - `#739 <https://github.com/ansys/pyspeos/pull/739>`_

        * - Add backwards compatibility test
          - `#740 <https://github.com/ansys/pyspeos/pull/740>`_, `#741 <https://github.com/ansys/pyspeos/pull/741>`_

        * - Bump ansys/actions from 10.0.20 to 10.1.2
          - `#745 <https://github.com/ansys/pyspeos/pull/745>`_

        * - Bump ansys/actions from 10.1.3 to 10.1.4
          - `#750 <https://github.com/ansys/pyspeos/pull/750>`_

        * - Bump docker/login-action from 3.5.0 to 3.6.0
          - `#751 <https://github.com/ansys/pyspeos/pull/751>`_

        * - Bump peter-evans/create-or-update-comment from 4.0.0 to 5.0.0
          - `#752 <https://github.com/ansys/pyspeos/pull/752>`_

        * - Bump actions/upload-artifact from 4.6.2 to 5.0.0
          - `#764 <https://github.com/ansys/pyspeos/pull/764>`_

        * - Bump actions/download-artifact from 5.0.0 to 6.0.0
          - `#765 <https://github.com/ansys/pyspeos/pull/765>`_

        * - Update missing or outdated files
          - `#769 <https://github.com/ansys/pyspeos/pull/769>`_

        * - Bump ansys/actions from 10.1.4 to 10.1.5
          - `#770 <https://github.com/ansys/pyspeos/pull/770>`_

        * - Adjust ansys tools path dependency
          - `#777 <https://github.com/ansys/pyspeos/pull/777>`_

        * - Bump actions/checkout from 5.0.0 to 6.0.0
          - `#779 <https://github.com/ansys/pyspeos/pull/779>`_

        * - Bump actions/setup-python from 6.0.0 to 6.1.0
          - `#784 <https://github.com/ansys/pyspeos/pull/784>`_

        * - Bump ansys/actions from 10.1.5 to 10.2.2
          - `#787 <https://github.com/ansys/pyspeos/pull/787>`_


  .. tab-item:: Miscellaneous

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Subprocess related line of codes
          - `#726 <https://github.com/ansys/pyspeos/pull/726>`_


`0.6.3 <https://github.com/ansys/pyspeos/releases/tag/v0.6.3>`_ - September 18, 2025
====================================================================================

.. tab-set::


  .. tab-item:: Fixed

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Append not supported scene data instance
          - `#727 <https://github.com/ansys/pyspeos/pull/727>`_

        * - Append not supported scene data instance (#727)
          - `#730 <https://github.com/ansys/pyspeos/pull/730>`_


  .. tab-item:: Maintenance

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Adapt docker run command for 25R2 sp2
          - `#722 <https://github.com/ansys/pyspeos/pull/722>`_

        * - Adapt docker run 25 r2sp2
          - `#729 <https://github.com/ansys/pyspeos/pull/729>`_

        * - Adapt docker run 25 r2sp2 (#729)
          - `#731 <https://github.com/ansys/pyspeos/pull/731>`_


`0.6.2 <https://github.com/ansys/pyspeos/releases/tag/v0.6.2>`_ - September 11, 2025
====================================================================================

.. tab-set::


  .. tab-item:: Documentation

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Add HTML context metadata
          - `#718 <https://github.com/ansys/pyspeos/pull/718>`_


  .. tab-item:: Maintenance

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Pre-commit autoupdate
          - `#716 <https://github.com/ansys/pyspeos/pull/716>`_

        * - Update CHANGELOG for v0.6.1
          - `#720 <https://github.com/ansys/pyspeos/pull/720>`_


`0.6.1 <https://github.com/ansys/pyspeos/releases/tag/v0.6.1>`_ - September 11, 2025
====================================================================================

.. tab-set::


  .. tab-item:: Dependencies

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Update grpcio requirement from <1.71,>=1.50.0 to >=1.50.0,<1.73 in the grpc-deps group
          - `#617 <https://github.com/ansys/pyspeos/pull/617>`_

        * - Bump the jupyter-deps group across 1 directory with 2 updates
          - `#659 <https://github.com/ansys/pyspeos/pull/659>`_, `#700 <https://github.com/ansys/pyspeos/pull/700>`_

        * - Update pyvista requirement from <0.46,>=0.40.0 to >=0.40.0,<0.47 in the graphics-deps group
          - `#695 <https://github.com/ansys/pyspeos/pull/695>`_

        * - Update pyvista[jupyter] requirement from <0.46,>=0.43 to >=0.43,<0.47
          - `#697 <https://github.com/ansys/pyspeos/pull/697>`_

        * - Update grpcio requirement from <1.73,>=1.50.0 to >=1.50.0,<1.75 in the grpc-deps group
          - `#698 <https://github.com/ansys/pyspeos/pull/698>`_

        * - Install comtypes only for windows
          - `#704 <https://github.com/ansys/pyspeos/pull/704>`_

        * - Bump the test-deps group with 2 updates
          - `#714 <https://github.com/ansys/pyspeos/pull/714>`_

        * - Bump the doc-deps group across 1 directory with 5 updates
          - `#715 <https://github.com/ansys/pyspeos/pull/715>`_


  .. tab-item:: Documentation

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Update readme, support features info
          - `#670 <https://github.com/ansys/pyspeos/pull/670>`_


  .. tab-item:: Fixed

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Subpart commit modified to work when updating an existing subpart
          - `#664 <https://github.com/ansys/pyspeos/pull/664>`_

        * - Change default version to 252
          - `#687 <https://github.com/ansys/pyspeos/pull/687>`_

        * - Handle specificities of new server 25R2 SP1 and backward compatibility with previous servers.
          - `#717 <https://github.com/ansys/pyspeos/pull/717>`_


  .. tab-item:: Maintenance

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Pre-commit autoupdate
          - `#638 <https://github.com/ansys/pyspeos/pull/638>`_, `#689 <https://github.com/ansys/pyspeos/pull/689>`_, `#707 <https://github.com/ansys/pyspeos/pull/707>`_

        * - Update changelog for v0.6.0
          - `#665 <https://github.com/ansys/pyspeos/pull/665>`_

        * - Update docker tag to 252 for doc stage
          - `#668 <https://github.com/ansys/pyspeos/pull/668>`_

        * - Bump ansys/actions from 10.0.12 to 10.0.13
          - `#674 <https://github.com/ansys/pyspeos/pull/674>`_

        * - Pin vtk-osmesa version
          - `#675 <https://github.com/ansys/pyspeos/pull/675>`_

        * - Bump docker/login-action from 3.4.0 to 3.5.0
          - `#692 <https://github.com/ansys/pyspeos/pull/692>`_

        * - Bump ansys/actions from 10.0.13 to 10.0.14
          - `#693 <https://github.com/ansys/pyspeos/pull/693>`_

        * - Bump actions/download-artifact from 4.3.0 to 5.0.0
          - `#694 <https://github.com/ansys/pyspeos/pull/694>`_

        * - Bump actions/checkout from 4.2.2 to 5.0.0
          - `#701 <https://github.com/ansys/pyspeos/pull/701>`_

        * - Bump codecov/codecov-action from 5.4.3 to 5.5.0
          - `#702 <https://github.com/ansys/pyspeos/pull/702>`_

        * - Bump pypa/gh-action-pypi-publish from 1.12.4 to 1.13.0
          - `#709 <https://github.com/ansys/pyspeos/pull/709>`_

        * - Bump actions/labeler from 5.0.0 to 6.0.1
          - `#710 <https://github.com/ansys/pyspeos/pull/710>`_

        * - Bump actions/setup-python from 5.6.0 to 6.0.0
          - `#711 <https://github.com/ansys/pyspeos/pull/711>`_

        * - Bump codecov/codecov-action from 5.5.0 to 5.5.1
          - `#712 <https://github.com/ansys/pyspeos/pull/712>`_

        * - Bump ansys/actions from 10.0.14 to 10.0.20
          - `#713 <https://github.com/ansys/pyspeos/pull/713>`_


  .. tab-item:: Test

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Core - sub part - check that modifying sub part's axis system i…
          - `#671 <https://github.com/ansys/pyspeos/pull/671>`_


`0.6.0 <https://github.com/ansys/pyspeos/releases/tag/v0.6.0>`_ - July 15, 2025
===============================================================================

.. tab-set::


  .. tab-item:: Added

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Kernel - facestub - add create_batch and read_batch methods
          - `#369 <https://github.com/ansys/pyspeos/pull/369>`_

        * - enhance the project preview: luminaire, surface, rayfile
          - `#561 <https://github.com/ansys/pyspeos/pull/561>`_

        * - lightexpert
          - `#592 <https://github.com/ansys/pyspeos/pull/592>`_

        * - Add 3d irradiance
          - `#595 <https://github.com/ansys/pyspeos/pull/595>`_

        * - Add version warnings
          - `#608 <https://github.com/ansys/pyspeos/pull/608>`_

        * - Spectralbsdf
          - `#614 <https://github.com/ansys/pyspeos/pull/614>`_

        * - Add method to export simulation
          - `#629 <https://github.com/ansys/pyspeos/pull/629>`_

        * - Add natural light
          - `#633 <https://github.com/ansys/pyspeos/pull/633>`_

        * - Add export result as vtp files
          - `#643 <https://github.com/ansys/pyspeos/pull/643>`_

        * - Add cad visual data property
          - `#661 <https://github.com/ansys/pyspeos/pull/661>`_


  .. tab-item:: Dependencies

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - bump ansys-api-speos from 0.14.2 to 0.15.2
          - `#589 <https://github.com/ansys/pyspeos/pull/589>`_

        * - bump the doc-deps group with 3 updates
          - `#604 <https://github.com/ansys/pyspeos/pull/604>`_

        * - bump notebook from 7.4.2 to 7.4.3 in the jupyter-deps group across 1 directory
          - `#609 <https://github.com/ansys/pyspeos/pull/609>`_

        * - Bump ansys-sphinx-theme from 1.5.0 to 1.5.2 in the doc-deps group
          - `#616 <https://github.com/ansys/pyspeos/pull/616>`_

        * - Bump pytest from 8.3.5 to 8.4.0 in the test-deps group
          - `#618 <https://github.com/ansys/pyspeos/pull/618>`_

        * - Bump pytest-cov from 6.1.1 to 6.2.1 in the test-deps group
          - `#623 <https://github.com/ansys/pyspeos/pull/623>`_

        * - Bump pytest from 8.4.0 to 8.4.1 in the test-deps group
          - `#637 <https://github.com/ansys/pyspeos/pull/637>`_


  .. tab-item:: Documentation

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Add badges into readme.rst
          - `#610 <https://github.com/ansys/pyspeos/pull/610>`_

        * - Adjust missing examples
          - `#612 <https://github.com/ansys/pyspeos/pull/612>`_


  .. tab-item:: Fixed

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - add message size to nighly ci
          - `#600 <https://github.com/ansys/pyspeos/pull/600>`_

        * - Only reset the _visual_data when graphics_available is true
          - `#621 <https://github.com/ansys/pyspeos/pull/621>`_

        * - Read empty mesh when no body at root and subpart.1
          - `#632 <https://github.com/ansys/pyspeos/pull/632>`_

        * - Duplicated feature that is already inside the _features list
          - `#636 <https://github.com/ansys/pyspeos/pull/636>`_

        * - 640 camera with distortion v2 to v4
          - `#644 <https://github.com/ansys/pyspeos/pull/644>`_

        * - Sim export_unittest for windows
          - `#655 <https://github.com/ansys/pyspeos/pull/655>`_

        * - Kernel - faceactions - check if batch is available on server - if available use batch project _fill_bodies
          - `#656 <https://github.com/ansys/pyspeos/pull/656>`_

        * - Print of protobuf messages containing special characters
          - `#663 <https://github.com/ansys/pyspeos/pull/663>`_


  .. tab-item:: Maintenance

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - update CHANGELOG for v0.5.0
          - `#597 <https://github.com/ansys/pyspeos/pull/597>`_

        * - bump dev version into v0.6.dev0
          - `#598 <https://github.com/ansys/pyspeos/pull/598>`_

        * - pre-commit autoupdate
          - `#599 <https://github.com/ansys/pyspeos/pull/599>`_

        * - update CHANGELOG for v0.5.1
          - `#602 <https://github.com/ansys/pyspeos/pull/602>`_

        * - bump ansys/actions from 9.0.11 to 9.0.13
          - `#606 <https://github.com/ansys/pyspeos/pull/606>`_

        * - Pre-commit autoupdate
          - `#611 <https://github.com/ansys/pyspeos/pull/611>`_, `#619 <https://github.com/ansys/pyspeos/pull/619>`_

        * - Bump ansys/actions into v10.0.3
          - `#613 <https://github.com/ansys/pyspeos/pull/613>`_

        * - Bump ansys/actions from 10.0.3 to 10.0.8
          - `#615 <https://github.com/ansys/pyspeos/pull/615>`_

        * - Bump ansys/actions from 10.0.8 to 10.0.11
          - `#622 <https://github.com/ansys/pyspeos/pull/622>`_

        * - Update dependabot cfg and code owners
          - `#627 <https://github.com/ansys/pyspeos/pull/627>`_

        * - Bump ansys/actions from 10.0.11 to 10.0.12
          - `#649 <https://github.com/ansys/pyspeos/pull/649>`_


  .. tab-item:: Test

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Add several tests for file transfer api
          - `#652 <https://github.com/ansys/pyspeos/pull/652>`_


`0.5.1 <https://github.com/ansys/pyspeos/releases/tag/v0.5.1>`_ - May 28, 2025
==============================================================================

.. tab-set::


  .. tab-item:: Fixed

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - coding error, switch to correct order
          - `#601 <https://github.com/ansys/pyspeos/pull/601>`_


`0.5.0 <https://github.com/ansys/pyspeos/releases/tag/v0.5.0>`_ - May 26, 2025
==============================================================================

.. tab-set::


  .. tab-item:: Added

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - geopath property
          - `#551 <https://github.com/ansys/pyspeos/pull/551>`_

        * - bsdf
          - `#581 <https://github.com/ansys/pyspeos/pull/581>`_


  .. tab-item:: Dependencies

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - update protobuf requirement from <6,>=3.20 to >=3.20,<7 in the grpc-deps group
          - `#500 <https://github.com/ansys/pyspeos/pull/500>`_

        * - update pyvista requirement from <0.45,>=0.40.0 to >=0.40.0,<0.46
          - `#562 <https://github.com/ansys/pyspeos/pull/562>`_

        * - update pyvista[jupyter] requirement from <0.45,>=0.43 to >=0.43,<0.46
          - `#563 <https://github.com/ansys/pyspeos/pull/563>`_

        * - bump notebook from 7.3.3 to 7.4.1
          - `#566 <https://github.com/ansys/pyspeos/pull/566>`_

        * - bump the doc-deps group across 1 directory with 2 updates
          - `#571 <https://github.com/ansys/pyspeos/pull/571>`_

        * - bump notebook from 7.4.1 to 7.4.2 in the jupyter-deps group
          - `#584 <https://github.com/ansys/pyspeos/pull/584>`_

        * - bump the doc-deps group across 1 directory with 3 updates
          - `#587 <https://github.com/ansys/pyspeos/pull/587>`_


  .. tab-item:: Documentation

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Update ``CONTRIBUTORS.md`` with the latest contributors
          - `#568 <https://github.com/ansys/pyspeos/pull/568>`_

        * - improve project example
          - `#572 <https://github.com/ansys/pyspeos/pull/572>`_

        * - Adjust prism example to new style
          - `#576 <https://github.com/ansys/pyspeos/pull/576>`_

        * - adjust part.py example to match new style
          - `#580 <https://github.com/ansys/pyspeos/pull/580>`_


  .. tab-item:: Fixed

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Integration direction display and adjust docstrings
          - `#570 <https://github.com/ansys/pyspeos/pull/570>`_

        * - unittest update based on bug 1229712
          - `#579 <https://github.com/ansys/pyspeos/pull/579>`_


  .. tab-item:: Maintenance

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - pre-commit autoupdate
          - `#552 <https://github.com/ansys/pyspeos/pull/552>`_, `#578 <https://github.com/ansys/pyspeos/pull/578>`_, `#585 <https://github.com/ansys/pyspeos/pull/585>`_, `#591 <https://github.com/ansys/pyspeos/pull/591>`_

        * - update CHANGELOG for v0.4.0
          - `#558 <https://github.com/ansys/pyspeos/pull/558>`_

        * - bump dev version
          - `#559 <https://github.com/ansys/pyspeos/pull/559>`_

        * - bump ansys/actions from 9.0.2 to 9.0.6 in the actions group
          - `#560 <https://github.com/ansys/pyspeos/pull/560>`_

        * - bump the actions group with 2 updates
          - `#567 <https://github.com/ansys/pyspeos/pull/567>`_

        * - bump ansys action version with quarto fix
          - `#573 <https://github.com/ansys/pyspeos/pull/573>`_

        * - update dependabot configuration
          - `#574 <https://github.com/ansys/pyspeos/pull/574>`_

        * - update code owners
          - `#577 <https://github.com/ansys/pyspeos/pull/577>`_

        * - bump ansys/actions from 9.0.7 to 9.0.9
          - `#582 <https://github.com/ansys/pyspeos/pull/582>`_

        * - bump codecov/codecov-action from 5.4.2 to 5.4.3
          - `#590 <https://github.com/ansys/pyspeos/pull/590>`_

        * - bump ansys/actions from 9.0.9 to 9.0.11
          - `#596 <https://github.com/ansys/pyspeos/pull/596>`_


  .. tab-item:: Miscellaneous

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - improve type hints
          - `#564 <https://github.com/ansys/pyspeos/pull/564>`_


`0.4.0 <https://github.com/ansys/pyspeos/releases/tag/v0.4.0>`_ - April 17, 2025
================================================================================

.. tab-set::


  .. tab-item:: Added

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Feat/add local launcher
          - `#454 <https://github.com/ansys/pyspeos/pull/454>`_

        * - add screenshot in pyvista related methods
          - `#521 <https://github.com/ansys/pyspeos/pull/521>`_

        * - enhance the project preview: irrad, rad, camera sensor features
          - `#528 <https://github.com/ansys/pyspeos/pull/528>`_

        * - switch to ansys tools and decouple requirements
          - `#532 <https://github.com/ansys/pyspeos/pull/532>`_


  .. tab-item:: Dependencies

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - bump ansys-sphinx-theme from 1.3.3 to 1.4.2 in the doc-deps group
          - `#524 <https://github.com/ansys/pyspeos/pull/524>`_

        * - bump pytest-cov from 6.0.0 to 6.1.0
          - `#533 <https://github.com/ansys/pyspeos/pull/533>`_

        * - bump pytest-cov from 6.1.0 to 6.1.1
          - `#542 <https://github.com/ansys/pyspeos/pull/542>`_

        * - bump psutil from 6.1.1 to 7.0.0
          - `#555 <https://github.com/ansys/pyspeos/pull/555>`_


  .. tab-item:: Documentation

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Update example combine-speos.py
          - `#499 <https://github.com/ansys/pyspeos/pull/499>`_

        * - open-results adjustments
          - `#538 <https://github.com/ansys/pyspeos/pull/538>`_

        * - adjust source example
          - `#543 <https://github.com/ansys/pyspeos/pull/543>`_

        * - adjust simulation example
          - `#545 <https://github.com/ansys/pyspeos/pull/545>`_

        * - remote instance
          - `#553 <https://github.com/ansys/pyspeos/pull/553>`_

        * - adjust sensor.py example
          - `#554 <https://github.com/ansys/pyspeos/pull/554>`_


  .. tab-item:: Fixed

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - issue with nightly pipeline
          - `#534 <https://github.com/ansys/pyspeos/pull/534>`_

        * - Graphs not showing with Ansys visualizer
          - `#537 <https://github.com/ansys/pyspeos/pull/537>`_

        * - improve examples and tests due to more errors raised by the new SpeosRPC server
          - `#546 <https://github.com/ansys/pyspeos/pull/546>`_


  .. tab-item:: Maintenance

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - remove code-style job to use precommit.ci
          - `#523 <https://github.com/ansys/pyspeos/pull/523>`_

        * - update CHANGELOG for v0.3.0
          - `#525 <https://github.com/ansys/pyspeos/pull/525>`_

        * - bump dev version into v0.4.dev0
          - `#526 <https://github.com/ansys/pyspeos/pull/526>`_

        * - pre-commit autoupdate
          - `#529 <https://github.com/ansys/pyspeos/pull/529>`_, `#541 <https://github.com/ansys/pyspeos/pull/541>`_

        * - bump ansys/actions from 8 to 9 in the actions group
          - `#544 <https://github.com/ansys/pyspeos/pull/544>`_

        * - Rename CONTRUBUTORS.md to CONTRIBUTORS.md
          - `#548 <https://github.com/ansys/pyspeos/pull/548>`_

        * - remove strong upper bound on build dep
          - `#549 <https://github.com/ansys/pyspeos/pull/549>`_

        * - pin actions version with full commit hash
          - `#557 <https://github.com/ansys/pyspeos/pull/557>`_


`0.3.0 <https://github.com/ansys/pyspeos/releases/tag/v0.3.0>`_ - March 28, 2025
================================================================================

.. tab-set::


  .. tab-item:: Added

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - provide a way for the user to limit number of threads
          - `#508 <https://github.com/ansys/pyspeos/pull/508>`_


  .. tab-item:: Dependencies

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - bump pytest from 8.3.4 to 8.3.5
          - `#484 <https://github.com/ansys/pyspeos/pull/484>`_

        * - bump the doc-deps group across 1 directory with 4 updates
          - `#509 <https://github.com/ansys/pyspeos/pull/509>`_

        * - bump notebook from 7.3.2 to 7.3.3
          - `#510 <https://github.com/ansys/pyspeos/pull/510>`_


  .. tab-item:: Documentation

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - fix 404 page when download example as python script
          - `#514 <https://github.com/ansys/pyspeos/pull/514>`_

        * - add example assets button
          - `#518 <https://github.com/ansys/pyspeos/pull/518>`_

        * - fix path to download assets
          - `#522 <https://github.com/ansys/pyspeos/pull/522>`_


  .. tab-item:: Fixed

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - core layer loading a camera sensor
          - `#503 <https://github.com/ansys/pyspeos/pull/503>`_

        * - doc: Adjust server launch command
          - `#505 <https://github.com/ansys/pyspeos/pull/505>`_


  .. tab-item:: Maintenance

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - update CHANGELOG for v0.2.0
          - `#490 <https://github.com/ansys/pyspeos/pull/490>`_

        * - update CHANGELOG for v0.2.1
          - `#492 <https://github.com/ansys/pyspeos/pull/492>`_


  .. tab-item:: Miscellaneous

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - remove ruff E ignores
          - `#495 <https://github.com/ansys/pyspeos/pull/495>`_

        * - remove ruff ignores F
          - `#506 <https://github.com/ansys/pyspeos/pull/506>`_

        * - ruff n
          - `#507 <https://github.com/ansys/pyspeos/pull/507>`_

        * - ruff TD002, TD003
          - `#512 <https://github.com/ansys/pyspeos/pull/512>`_


`0.2.1 <https://github.com/ansys/pyspeos/releases/tag/v0.2.1>`_ - March 06, 2025
================================================================================

.. tab-set::


  .. tab-item:: Fixed

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - add mandatory token to release-github
          - `#491 <https://github.com/ansys/pyspeos/pull/491>`_


`0.2.0 <https://github.com/ansys/pyspeos/releases/tag/v0.2.0>`_ - March 06, 2025
================================================================================

.. tab-set::


  .. tab-item:: Documentation

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - documentation review changes
          - `#483 <https://github.com/ansys/pyspeos/pull/483>`_


  .. tab-item:: Fixed

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - add missing notebook dependency
          - `#488 <https://github.com/ansys/pyspeos/pull/488>`_


  .. tab-item:: Maintenance

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - add project required info
          - `#470 <https://github.com/ansys/pyspeos/pull/470>`_

        * - update CHANGELOG for v0.1.1
          - `#473 <https://github.com/ansys/pyspeos/pull/473>`_

        * - update organization name
          - `#486 <https://github.com/ansys/pyspeos/pull/486>`_


  .. tab-item:: Miscellaneous

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - remove ignores for PTH
          - `#474 <https://github.com/ansys/pyspeos/pull/474>`_

        * - Remove ruff ignore for "D", pydocstyle
          - `#482 <https://github.com/ansys/pyspeos/pull/482>`_


`0.1.1 <https://github.com/ansys/pyspeos/releases/tag/v0.1.1>`_ - 2025-02-25
============================================================================

Maintenance
^^^^^^^^^^^

- update CHANGELOG for v0.1.0 `#471 <https://github.com/ansys/pyspeos/pull/471>`_
- bump dev version into v0.2.dev0 `#472 <https://github.com/ansys/pyspeos/pull/472>`_

`0.1.0 <https://github.com/ansys/pyspeos/releases/tag/v0.1.0>`_ - 2025-02-24
============================================================================

Dependencies
^^^^^^^^^^^^

- bump the doc-deps group across 1 directory with 4 updates `#452 <https://github.com/ansys/pyspeos/pull/452>`_


Documentation
^^^^^^^^^^^^^

- Documentation review `#455 <https://github.com/ansys/pyspeos/pull/455>`_
- fix broken inner links `#465 <https://github.com/ansys/pyspeos/pull/465>`_
- fix make.bat clean call `#466 <https://github.com/ansys/pyspeos/pull/466>`_


Fixed
^^^^^

- missing get method for optical properties `#434 <https://github.com/ansys/pyspeos/pull/434>`_
- examples local run path was incorrect `#451 <https://github.com/ansys/pyspeos/pull/451>`_


Maintenance
^^^^^^^^^^^

- add new jobs and cleanup workflows `#425 <https://github.com/ansys/pyspeos/pull/425>`_
- general update/addition of files at project root level `#427 <https://github.com/ansys/pyspeos/pull/427>`_
- update python versions and dependencies `#443 <https://github.com/ansys/pyspeos/pull/443>`_
- add nightly workflow `#444 <https://github.com/ansys/pyspeos/pull/444>`_
- update code owners `#448 <https://github.com/ansys/pyspeos/pull/448>`_
- update labeler `#456 <https://github.com/ansys/pyspeos/pull/456>`_
- cleanup repo `#459 <https://github.com/ansys/pyspeos/pull/459>`_


Miscellaneous
^^^^^^^^^^^^^

- avoid mutable value as default value in function `#436 <https://github.com/ansys/pyspeos/pull/436>`_
- update architecture `#445 <https://github.com/ansys/pyspeos/pull/445>`_
- remove docker compose and update doc `#449 <https://github.com/ansys/pyspeos/pull/449>`_
- use __getitem__ in SpeosClient `#461 <https://github.com/ansys/pyspeos/pull/461>`_
- the core sensor, source, simulation class name `#462 <https://github.com/ansys/pyspeos/pull/462>`_

.. vale on